--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:vue/vue3-recommended",
+    "plugin:tailwindcss/recommended",
     "prettier",
     "@nuxt/eslint-config"
   ],
@@ -17,6 +18,7 @@
   },
   "plugins": ["@typescript-eslint", "vue"],
   "rules": {
+    "vue/multi-word-component-names": "off",
     "quotes": ["error", "single"],
     "semi": ["error", "always"],
     "no-plusplus": "error",
