--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
     "@nuxt/eslint-config": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-tailwindcss": "^3.14.1",
     "eslint-plugin-vue": "^9.20.1",
     "nuxt": "^3.9.3",
+    "nuxt-lucide-icons": "^1.0.3",
+    "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "stylelint": "^16.2.0",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.0",
+    "tailwindcss": "^3.4.1",
     "vue": "^3.4.14",
     "vue-router": "^4.2.5"
   }
