--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "eslint-plugin-tailwindcss": "^3.14.1",
     "eslint-plugin-vue": "^9.20.1",
     "nuxt": "^3.9.3",
-    "nuxt-lucide-icons": "^1.0.3",
     "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "stylelint": "^16.2.0",
@@ -31,6 +30,7 @@
     "stylelint-config-standard": "^36.0.0",
     "tailwindcss": "^3.4.1",
     "vue": "^3.4.14",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-tsc": "^1.8.27"
   }
 }
