--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,20 +5,35 @@
   },
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:vue/vue3-recommended",
     "plugin:tailwindcss/recommended",
     "prettier",
     "@nuxt/eslint-config"
   ],
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "parser": "@typescript-eslint/parser",
-    "sourceType": "module"
-  },
-  "plugins": ["@typescript-eslint", "vue"],
   "rules": {
     "vue/multi-word-component-names": "off",
+    "vue/define-props-declaration": ["error", "type-based"],
+    "vue/define-emits-declaration": ["error", "type-literal"],
+    "vue/attributes-order": [
+      "error",
+      {
+        "alphabetical": true,
+        "order": [
+          "DEFINITION",
+          "LIST_RENDERING",
+          "CONDITIONALS",
+          "RENDER_MODIFIERS",
+          "GLOBAL",
+          ["UNIQUE", "SLOT"],
+          "TWO_WAY_BINDING",
+          "OTHER_DIRECTIVES",
+          "ATTR_DYNAMIC",
+          "ATTR_STATIC",
+          "ATTR_SHORTHAND_BOOL",
+          "EVENTS",
+          "CONTENT"
+        ]
+      }
+    ],
     "quotes": ["error", "single"],
     "semi": ["error", "always"],
     "no-plusplus": "error",
