--- a/package.json
+++ b/package.json
@@ -14,22 +14,19 @@
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.2.0",
-    "@nuxt/image": "latest",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
+    "@nuxt/image": "^1.3.0",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-tailwindcss": "^3.14.1",
-    "eslint-plugin-vue": "^9.20.1",
-    "nuxt": "^3.9.3",
-    "postcss": "^8.4.33",
-    "prettier": "^3.2.4",
-    "stylelint": "^16.2.0",
+    "eslint-plugin-tailwindcss": "^3.14.2",
+    "nuxt": "^3.10.1",
+    "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
+    "stylelint": "^16.2.1",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.0",
     "tailwindcss": "^3.4.1",
-    "vue": "^3.4.14",
+    "vue": "^3.4.18",
     "vue-router": "^4.2.5",
     "vue-tsc": "^1.8.27"
   }
