--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "devDependencies": {
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxt/image": "^1.3.0",
+    "@nuxtjs/device": "^3.1.1",
+    "@vueuse/nuxt": "^10.7.2",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
