--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "mysite",
   "private": true,
   "type": "module",
   "scripts": {
@@ -16,6 +16,8 @@
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxt/image": "^1.3.0",
     "@nuxtjs/device": "^3.1.1",
+    "@nuxtjs/i18n": "^8.1.0",
+    "@vee-validate/nuxt": "^4.12.5",
     "@vueuse/nuxt": "^10.7.2",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
