--- a/package.json
+++ b/package.json
@@ -16,22 +16,23 @@
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxt/image": "^1.3.0",
     "@nuxtjs/device": "^3.1.1",
-    "@nuxtjs/i18n": "^8.1.0",
+    "@nuxtjs/google-fonts": "^3.1.3",
+    "@nuxtjs/i18n": "^8.1.1",
     "@vee-validate/nuxt": "^4.12.5",
-    "@vueuse/nuxt": "^10.7.2",
+    "@vueuse/nuxt": "^10.8.0",
     "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-tailwindcss": "^3.14.2",
-    "nuxt": "^3.10.1",
+    "eslint-plugin-tailwindcss": "^3.14.3",
+    "nuxt": "^3.10.3",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "stylelint": "^16.2.1",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.0",
     "tailwindcss": "^3.4.1",
-    "vue": "^3.4.18",
-    "vue-router": "^4.2.5",
+    "vue": "^3.4.19",
+    "vue-router": "^4.3.0",
     "vue-tsc": "^1.8.27"
   }
 }
