--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "i18n-ally.localesPaths": ["assets/locales"]
+  "i18n-ally.localesPaths": ["assets/locales"],
+  "eslint.experimental.useFlatConfig": true
 }
