--- a/package.json
+++ b/package.json
@@ -13,26 +13,25 @@
     "type": "vue-tsc --noEmit"
   },
   "devDependencies": {
-    "@nuxt/eslint-config": "^0.2.0",
-    "@nuxt/image": "^1.4.0",
-    "@nuxtjs/device": "^3.1.1",
-    "@nuxtjs/google-fonts": "^3.1.3",
-    "@nuxtjs/i18n": "^8.1.1",
-    "@vee-validate/nuxt": "^4.12.6",
-    "@vueuse/nuxt": "^10.9.0",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-tailwindcss": "^3.14.3",
-    "nuxt": "^3.10.3",
-    "postcss": "^8.4.35",
-    "prettier": "^3.2.5",
-    "stylelint": "^16.2.1",
-    "stylelint-config-recommended-vue": "^1.5.0",
-    "stylelint-config-standard": "^36.0.0",
-    "tailwindcss": "^3.4.1",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
-    "vue-tsc": "^1.8.27"
+    "@nuxt/eslint": "0.3.6",
+    "@nuxt/image": "1.5.0",
+    "@nuxtjs/device": "3.1.1",
+    "@nuxtjs/google-fonts": "3.2.0",
+    "@nuxtjs/i18n": "8.3.0",
+    "@vee-validate/nuxt": "4.12.6",
+    "@vueuse/nuxt": "10.9.0",
+    "autoprefixer": "10.4.19",
+    "eslint": "9.0.0",
+    "nuxt": "3.11.2",
+    "postcss": "8.4.38",
+    "prettier": "3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.13",
+    "stylelint": "16.3.1",
+    "stylelint-config-recommended-vue": "1.5.0",
+    "stylelint-config-standard": "36.0.0",
+    "tailwindcss": "3.4.3",
+    "vue": "3.4.21",
+    "vue-router": "4.3.0",
+    "vue-tsc": "1.8.27"
   }
 }
