--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxt/image": "1.6.0",
     "@nuxtjs/google-fonts": "3.2.0",
     "@nuxtjs/i18n": "8.3.1",
+    "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "10.4.19",
     "eslint": "9.1.1",
     "nuxt": "3.11.2",
